# Deposits-Channel

./: .gitignore  .pre-commit-config.yaml  README.md  paper.md  pyproject.toml  report.tex  slides_outline.md
docs/plans/: 2026-04-13-frontier-research-suite-design.md  2026-04-13-macro-finance-deep-dive-design.md
docs/superpowers/plans/: 2026-04-13-frontier-research-terminal-v5.md  2026-04-13-macro-finance-terminal-v4.md  2026-04-14-story-flow-implementation.md  2026-04-16-multi-audience-terminal-expansion.md  2026-04-17-guided-entry-orientation.md  2026-04-17-research-seminar-editorial-pass.md  2026-04-17-scholarly-modern-visual-overhaul.md  2026-04-17-section-navigation.md
docs/superpowers/specs/: 2026-04-14-story-flow-design.md  2026-04-16-multi-audience-terminal-expansion-design.md  2026-04-17-decision-layer-design.md  2026-04-17-guided-entry-orientation-design.md  2026-04-17-research-seminar-editorial-pass-design.md  2026-04-17-scholarly-modern-visual-overhaul-design.md  2026-04-17-section-navigation-design.md
src/: analysis.py  app.py  cli.py  data_fetcher.py  simulation.py
tests/: test_analysis.py  test_cli.py  test_data_fetcher.py  test_simulation.py
