[project]
name = "deposits-channel-dashboard"
version = "0.1.0"
description = "Interactive dashboard for the Deposits Channel of Monetary Policy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "plotly>=5.19.0",
    "statsmodels>=0.14.0",
    "requests>=2.31.0",
    "yfinance>=1.2.1",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]
